# exercise_sheet_to_graph

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pylint.yml  zap.yml
.zap/: rules.tsv
config/: district_and_exercise_english.yaml  district_and_exercise_italian.yaml
src/exercise_sheet_to_graph/: GraphViewer.py  app.py  district_exercise_mapper.py  graph_creator.py  graph_viewer.py  infogenerator.py  infosaver.py  models.py  utils.py
src/exercise_sheet_to_graph/templates/: base.html  graphs.html  home.html  index.html  login.html  register.html  success.html
tests/: test_districtexercisemapper.py  test_graphgenerator.py  test_graphviewer.py  test_infogenerator.py  test_infosaver.py
tests/data/: esempio.txt  esempio2.txt
tests/data/db/: data_20241013_183717_giorgio_finizio.yaml
