[metadata]
name = exercise_sheet_to_graph
version = 0.0.1
author = Lorenzo Battistello
description = A Repository to convert files with exercise information like (exercise, reps, kg) to graph.

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.9
install_requires =
    pydantic
    flask
    pyyaml
    werkzeug
    flask-sqlalchemy

[options.extras_require]
test = pytest

[options.packages.find]
where = src

